parser/src/test/resources/corpus/invalid/26_distribute_missing_through.ff
rule "Distribute Missing Through" {
  distribute amount waterfall "European"
}
